--- a/style/style.css
+++ b/style/style.css
@@ -2,18 +2,43 @@ body{
     font-family: 'Poppins', sans-serif;
     body:0;
 }
+/* header part */
+nav ul{
+  display: flex;
+}
+nav li{
+  list-style: none;
+  margin-right: 20px;
+  color: #E02C6D;
+  padding: 3px;
+}
+nav li:hover{
+  background-color:whitesmoke;
+  color: #2D25A0;
+
+}
+nav li a{
+  text-decoration: none;
+}
+header{
+  padding-top: 1%;
+}
 /*---------------
-  players top
+  players detail
  ---------------- */
+
+ .container{
+  background: #2D25A0;
+
+ }
 .top-part{
   display:flex;
-  background: #2D25A0;
 
 }
 .half-width{
   width: 50%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  /* margin-top: 5%; */
+  /* margin-bottom: 5%; */
   margin-left:10% ;
   margin-right: 5%;
 }
@@ -69,6 +94,11 @@ h1{
 .last-part{
   display: flex;
 }
+hr{
+  border:1px solid #D1D1D1;
+  margin-top: 5%;
+ 
+}
 
 /* footer part */
 
@@ -84,8 +114,24 @@ h1{
 }
 .footer-font{
  text-align: center;
+ color:#0a5c8b;
+
 }
 .footer-blog{
   margin-left: 40%;
   margin-top: 2%;
+}
+/* media queries */
+/* mobile devices */
+@media only screen and (max-width:688){
+  .container{
+    width: 100%;
+  }
+  .top-part .players{
+    grid-template-columns: repeat(1,1frs);
+
+  }
+  .player{
+    flex-direction: column;
+  }
 }
