--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
-    body:0;
+    margin: 0%;
 }
 /* header part */
 nav ul{
@@ -30,6 +30,9 @@ header{
  .container{
   background: #2D25A0;
 
+ }
+ .top-players{
+   text-align: center;
  }
 .top-part{
   display:flex;
@@ -64,7 +67,7 @@ header{
   grid-template-columns: repeat(3, 1fr);
   margin-left: 5%;
   margin-right: 5%;
-  margin-top: 3%;
+  /* margin-top: 3%; */
   padding: 3%;
 }
 .player{
